--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
  outline: none;
 }
 
+html {
+    font-size: 62.5%; 
+ overflow:hidden;
+    
+  }
+  
+
 ul,li{
     list-style: none;
 }
@@ -15,53 +22,86 @@ a{
 }
 
 body{
-    background: #000;
-    overflow-x: hidden;
-    padding-left: 270px;
+    position: initial;
+    overflow: hidden;
+    min-height: 100vh;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    background: linear-gradient(deeppink, purple);
+    padding: 80px;
     
 }
 
-section{
-   min-height: 100vh;
-   padding: 20px ;
-
+.btn{
+    padding: 10px 20px;
+    background: rgba(255,255,255,.3);
+    color: #fff;
+    font-size: 20px;
+    margin-top: 20px;
+    text-transform: capitalize;
+    transition: all linear .2s;
+    cursor: pointer;
+    transition: all linear .2s;
+    -webkit-transition: all linear .2s;
+    -moz-transition: all linear .2s;
+    -ms-transition: all linear .2s;
+    -o-transition: all linear .2s;
+}
+.btn:hover{
+    background: rgba(255,255,255,0.5);
+    color: #555;
+}
+.btn i{
+    padding: 0 10px;
+    font-size: 20px;
+  
 }
 
+.heading{
+    font-size: 30px;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+
+}
+section{
+    padding: 16px 7%;
+    min-height: 100%;
+}
+
+.container{
+    width: 700px;
+    height: 700px;
+    background: rgb(255, 255, 255,.2);
+    box-shadow: 0 16px 30px rgba(0,0,0,.3);
+    overflow: hidden;
+   border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
 
 
 /* =======header parts========= */
 
 
 header{
-    position: fixed;
-    top: 30px;
-    left: 0;
-    width: 270px;
-    height: 100%;
-    background: #1a1a1a;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column;
+    width: 300px;
+    background: rgb(255, 255, 255,.2);
+    box-shadow: 0 16px 30px rgba(0,0,0,.3);
     text-align: center;
-    z-index: 9999;
+    height: 700px;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
 }
-
-.heading{
-
-    text-align: center;
-    margin: 0 100px;
-    font-size: 30px;
-    padding: 20px;
-    border-bottom: 2px solid grey;
-    color: #fff;
-
+header .user{
+    padding-top: 30px;
 }
-
-.heading span{
-    color: yellowgreen;
-}
-
 
 
 header .user img{
@@ -71,44 +111,48 @@ header .user img{
     margin-top: 20px;
     margin-bottom: 20px;
     object-fit: cover;
-    border: 2px solid yellow;
+    box-shadow: 0 0 0 16px rgba(255, 255, 255, .2);
+   
    
 }
 
-header .name{
+header .user .name{
     font-size: 25px;
     color: #fff;
+    padding: 15px 0;
 }
-header .post{
+header .user .post{
     font-size: 16px;
     color: #fff;
-    margin-bottom: 10px;
+
+   
 }
-header .navbar ul{
-    padding: 5px ;
+header .navbar {
+    padding: 20px 30px;
+}
+header .navbar ul li{
+    margin: 20px 0;
 }
 
 header .navbar ul li a{
     display: block;
-    padding: 10px  ;
+    padding: 5px 50px ;
     margin: 10px;
-    background: grey;
+    background: rgba(255,255,255,.2);
     color: #fff;
     font-size: 16px;
     justify-content: center;
-    border-radius: 20%;
-    -webkit-border-radius: 20%;
-    -moz-border-radius: 20%;
-    -ms-border-radius: 20%;
-    -o-border-radius: 20%;
+    
     transition: all linear .3s;
     -webkit-transition: all linear .3s;
     -moz-transition: all linear .3s;
     -ms-transition: all linear .3s;
     -o-transition: all linear .3s;
+    box-shadow: 0 0 0 16px rgba(255, 255, 255, .2)
 }
 header .navbar ul li a:hover{
-    background: yellowgreen;
+    background:#555;
+    box-shadow: 0 0 0 16px rgba(255, 255, 255, .5)
 }
 
 /* menu bar section */
@@ -127,268 +171,344 @@ header .navbar ul li a:hover{
     
 }
 
+
+
+
 /* home section */
 
-.home{
-    display: flex;
-    justify-items: center;
-    flex-flow: column;
-    padding: 100px 200px;
-}
+/* #home{
+    padding-top: 100px;
+    
+} */
+.wrapper {
+	min-height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-flow: column;
+    position: relative;
+    padding-bottom: 100px;
 
-.home h3{
-    font-size: 20px;
+    
+}
+.wrapper h3{
+    font-size: 24px;
     color: white;
 }
-
-
-.home h1{
-    font-size: 40px;
-    color: white;
-}
-.home h1 span{
-    color: yellow;
-}
-
-.home p{
+.wrapper h3 span{
+    font-size: 30px;
     color: #fff;
-    font-size: 14px;
-    padding: 20px 0;
-    padding-right: 20px;
-  
 }
-.btn{
+
+.wrapper .post{
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
+
+.wrapper .post span{
+    color: #fff;
+    font-size: 28px;
+}
+
+
+ .social{
+  position: absolute;
+  left: 50%;
+  bottom: 80px;
+  transform: translateX(-50%);
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  transition: all linear .2s ;
+  -webkit-transition: all linear .2s ;
+  -moz-transition: all linear .2s ;
+  -ms-transition: all linear .2s ;
+  -o-transition: all linear .2s ;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  background: rgba(255,255,255,0.1);
+  box-shadow:0 10px 10px rgba(0,0,0,.2);
+  border-radius:20px ;
+  -webkit-border-radius:20px ;
+  -moz-border-radius:20px ;
+  -ms-border-radius:20px ;
+  -o-border-radius:20px ;
+}
+ .social a{
+    color: #fff;
     padding: 10px 20px;
-    background: grey;
-    color: #fff;
-    font-size: 20px;
-    margin-top: 20px;
-    text-transform: capitalize;
-    border-radius: 80px;
-    -webkit-border-radius: 80px;
-    -moz-border-radius: 80px;
-    -ms-border-radius: 80px;
-    -o-border-radius: 80px;
-    transition: all linear .2s;
+    background: rgba(255,255,255,0.1);
+    box-shadow: 0 10px 30px rgba(255,255,255,.2);
+    border-radius: 10px;
+    margin:20px;
+    font-size: 16px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+.social a:hover{
+    background: rgba(255,255,255,.5);
 }
 
-.btn i{
-    padding: 0 10px;
-    font-size: 20px;
   
-}
-
-.btn:hover{
-    background: yellow;
-    color: #000;
-}
 
 /* =======about========== */
 
 
-.about .row{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 20px 0;
-
+.about{
+    min-height: 100%;
 }
 
-.about .row .info{
-    flex: 1 1 400px;
-    padding: 30px 20px;
-    padding-left: 20px;
-}
-
-.about .row .info h3{
+.about .content h3{
     color: yellow;
     font-size: 20px;
     padding: 10px 0;
     font-weight: normal;
 
 }
-.about .row .info h3 span{
+.about  .content h3 span{
     color: #eee;
     padding: 0 10px;
 
 }
-
-.about .row .counter{
-    flex: 1 1 400px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.about .row .counter .box{
-    width: 180px;
-    background:green;
-    text-align: center;
-    padding: 10px;
-    margin: 20px;
-}
-
-.about .row .counter .box span{
+.about .content p{
     color: yellow;
-    font-size: 30px;
+    font-size: 14px;
+    padding: 10px 0;
+    font-weight: normal;
+
 }
-.about .row .counter .box h3{
-    font-size: 20px;
+
+.about .skill{
+    padding: 20px 0;
+}
+.about .skill .progress{
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+    background: rgba(255, 255, 255, .2);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+.about .skill .progress h3{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
     color: #fff;
 }
+.about .skill .progress .bar{
+    position: relative;
+    width: 100%;
+    height: 3px;
+    margin: 20px 0;
+    background: #555;
 
-/* =======education parts starts here=========== */
+}
+.about .skill .progress .bar span{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background: #fff;
+}
+
+.about .skill .progress:nth-child(1) .bar span{
+    width: 95%;
+}
+.about .skill .progress:nth-child(2) .bar span{
+    width: 80%;
+}
+.about .skill .progress:nth-child(3) .bar span{
+    width: 75%;
+}
+.about .skill .progress:nth-child(4) .bar span{
+    width: 70%;
+}
+.about .skill .progress:nth-child(5) .bar span{
+    width: 65%;
+}
+
+
+
+
+
+/* ==========service part========= */
+
+
+.service{
+    min-height: 100%;
+}
+.service .box-container{
+    
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+   
+   
+}
+
+.service .box-container .box{
+    margin: 20px;
+    padding: 20px;
+    border-radius: 16px;
+    box-shadow: 0 16px 30px rgba(0, 0, 0, .2);
+    background: rgba(255, 255, 255, .2);
+    text-align: center;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+    width: 250px;
+}
+
+.service .box-container .box i{
+    color: #fff;
+    font-size: 30px;
+    padding: 16px 0;
+}
+
+.service .box-container .box p{
+    color: #fff;
+    font-size: 20px;
+    
+}
+
+
+/* ==============================education part================ */
 
 .education .box-container{
     display: flex;
+    /* align-items: center; */
     justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
-    padding: 10px 0;
-    padding-left: 30px;
+    padding: 30px 0;
 }
 
 .education .box-container .box{
-    width: 200px;
-    margin: 40px 20px;
-    padding-left: 20px;
-    border-left: 1px solid #fff;
+    width: 250px;
+    padding: 0 30px;
+    padding-bottom: 40px;
+    border-left: 2px solid #fff;
+}
+
+
+.education .box-container .box .year{
     position: relative;
-}
-.education .box-container .box span{
-    font-size: 20px;
-    background: #222;
+    font-size: 30px;
     color: #fff;
-    border-radius: 80px;
-    -webkit-border-radius: 80px;
-    -moz-border-radius: 80px;
-    -ms-border-radius: 80px;
-    -o-border-radius: 80px;
-    padding: 10px 40px;
 }
+
+.education .box-container .box .year::before{
+    content: '';
+    left: -45px;
+    top: 0;
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background: #fff;
+}
+
 .education .box-container .box h3{
-    color: #fff;
-    padding-top: 20px;
-    font-size: 16px;
-    font-weight: 700;
-}
-.education .box-container .box p{
+    font-size: 18px;
     color: #fff;
     padding: 10px 0;
+}
+.education .box-container .box p{
     font-size: 14px;
-    font-weight: 300px;
+    color: #fff;
+    padding: 10px 0;
 }
 
- .education .box-container .box i {
-      position: absolute;
-        top: -20px;
-        left: -20px;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        -webkit-border-radius: 50%;
-        -moz-border-radius: 50%;
-        -ms-border-radius: 50%;
-        -o-border-radius: 50%;
-        line-height: 40px;
-        text-align: center;
-        font-size: 20px;
-        background: yellow;
-        color: black;
-    }
-/* ============portfolio======================= */
-
-.portfolio .box-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 20px 0;
-}
-
-.portfolio .box-container .box{
-    height: 200px;
-    width: 200px;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    margin: 30px;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.portfolio .box-container .box img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-
-}
-
-.portfolio .box-container .box:hover img{
-    transform:scale(1.1);
-    
-}
 /* =========contact ================== */
 .contact .row{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    padding-top: 60px;
     align-items: center;
-    flex-wrap: wrap;
-    
 
 }
 
 .contact .row .content{
-    flex: 1 1 200px;
-    padding: 10px;
-    padding-bottom: 0;
+  
+    padding:0 50px;
 }
 .contact .row form{
-    flex: 1 1 500px;
-    padding: 30px;
-    margin: 30px;
-   
+    display: flex;
+    justify-content: space-between;
+    padding-top: 60px;
+    padding: 15px 30px;
+    flex-wrap: wrap;
+    background: rgba(100, 64, 64, 0.1);
+    box-shadow: 0 15px 30px rgb(255, 255, 255,.2);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
 }
 
 .contact .row form .box{
-    padding: 10px;
-    margin: 20px 0;
-    background: grey;
+    background: rgba(100, 64, 64, 0.1);
+    box-shadow: 0 15px 30px rgb(255, 255, 255,.2);
+    border-radius: 15px;
+    padding:0 10px;
+    margin: 10px 0;
     color: #fff;
     text-transform: none;
     font-size: 20px;
-    width: 100%;
+    height: 40px;
+    width: 49%;
+   
 }
 .contact .row form .box::placeholder{
     text-transform: capitalize;
     font-size: 14px;
+    color: #fff;
 }
 .contact .row form .message{
     height: 200px;
     resize: none;
+    width: 100%;
+    padding: 16px;
 }
-.contact .row .content .title{
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 20px;
-    padding-bottom: 30px;
+.contact .row form .btn{
+
+    margin-bottom: 16px;
 }
-.contact .row .content .info h3{
-    display: flex;
-    align-items: center;
-    font-size: 18px;
-    color: #eee;
+
+.contact .row .content .icons{
     padding: 10px 0;
-    font-weight: normal;
 }
-.contact .row .content .info h3 a{
+
+.contact .row .content .icons h3{
+    padding: 10px 0;
     color: #fff;
+    font-size: 16px;
+    display: flex;
 }
-.contact .row .content .info h3 i{
-    padding-right: 10px;
+.contact .row .content p{
+    color: #fff;
+   
+}
+
+.contact .row .content a p{
+    color: #fff;
+   
+}
+.contact .row .content h3 i{
+    padding-right: 5px;
     color: yellow;
 }
 /* ==================scroll top============== */
@@ -400,4 +520,61 @@ header .navbar ul li a:hover{
     z-index: 9999;
     font-size: 40px;
     color: #fff;
+}
+.wrapper {
+    height: 100vh;
+    
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
+  .typing-demo {
+    width: 60%;
+    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid #fff;
+    
+    -webkit-animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+}
+  
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  }
+      
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  }
+
+  /* ===========theme============ */
+
+  .theme-toggler{
+      background: rgb(255, 255, 255,.2);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, .2);
+      border-radius: 16px;
+      backdrop-filter: blur(.04px);
+      -webkit-border-radius: 16px;
+      -moz-border-radius: 16px;
+      -ms-border-radius: 16px;
+      -o-border-radius: 16px;
+}
+
+.theme-toggler span{
+    display: block;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    cursor: pointer;
+    margin: 30px 45px;
+    box-shadow: 0 0 0 8px rgba(255,255,255,.2),
+                0 16px 30px rgba(0,0,0,.4);
 }
